--- a/src/HBShimlayer/MakeFile.am
+++ b/src/HBShimlayer/MakeFile.am
@@ -1,25 +1,58 @@
-emaneincdir = $(includedir)/emane/utils/
+ SUBDIRS=                             \
+ .                                    \
+ eventscheduler
 
-emaneinc_HEADERS =                       \
- bitpool.h                               \
- bitpool.inl                             \
- conversionutils.h                       \
- factoryexception.h                      \
- netutils.h                              \
- parameterconvert.h                      \
- parameterconvert.inl                    \
- pathlossesholder.h                      \
- randomnumberdistribution.h              \
- singleton.h                             \
- spectrumwindowutils.h                   \
- statistichistogramtable.h               \
- statistichistogramtable.inl             \
- threadutils.h                           \
- timer.h                                 \
- timer.inl                               \
- runningaverage.h                        \
- commonlayerstatistics.h                 \
- vectorio.h
+lib_LTLIBRARIES = libtdmabase.la
+
+libtdmabase_la_CPPFLAGS=             \
+ -I@top_srcdir@/include              \
+ $(AM_CPPFLAGS)                      \
+ $(libemane_CFLAGS)
+
+libtdmabase_la_LIBADD=                       \
+ $(libuuid_LIBS)                             \
+ $(libxml2_LIBS)                             \
+ $(protobuf_LIBS)                            \
+ @top_srcdir@/src/libemane/.libs/libemane.la
+
+libtdmabase_la_LDFLAGS=              \
+ $(AM_LDFLAGS)                       \
+ -avoid-version
+
+libtdmabase_la_SOURCES =             \
+ HBeventscheduler.cc                 \ 
+ HBtdmascheduleevent.cc              \
+ basemodelHB.cc                      \
+ basemodelimplHB.cc                  \
+ basicqueuemanagerHB.cc              \
+ packetstatuspublisherimpl.cc        \ 	                             \
+ queueHB.cc                          \
+ frameworkphyHB.cc                   \
+ queueHB.cc                          \
+ queuemanagerHB.cc                   \
+ receivemanagerHB.cc                 \
+ basemodelimplHB.h                   \
+ queueHB.h                           \
+ receivemanagerHB.h                  \
+ pathlossesholder.h                  \
+ frameworkphyshim.h                  \
+
+nodist_libtdmabase_la_SOURCES =      \
+ tdmabasemodelmessage.pb.cc          \
+ tdmabasemodelmessage.pb.h
+
+EXTRA_DIST=                          \
+ tdmabasemodelmessage.proto          \
+ tdmabasemodelpcr.xml
+
+BUILT_SOURCES =                      \
+ $(nodist_libtdmabase_la_SOURCES)
+
+clean-local:
+	rm -f $(BUILT_SOURCES)
+
+tdmabasemodelmessage.pb.cc tdmabasemodelmessage.pb.h: tdmabasemodelmessage.proto
+	protoc -I=. --cpp_out=. $<
 
 install-exec-hook:
 	$(mkinstalldirs) $(DESTDIR)$(emaneincdir)
