--- a/src/HBShimlayer/MakeFile.am
+++ b/src/HBShimlayer/MakeFile.am
@@ -1,6 +1,6 @@
  SUBDIRS=                             \
  .                                    \
- eventscheduler
+ pythonFile
 
 lib_LTLIBRARIES = libtdmabase.la
 
